syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message SumData {
    int64 first_number = 1;
    int64 second_number = 2;
}

message SumRequest {
    SumData sum_data = 1;
}

message SumResponse {
    int64 result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 prime_number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 result = 1;
}

service CalculatorService{
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
    // server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}